--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ header {
 body { 
 color:black; 
 backgroud:white;
+     font-family: "Funnel Sans", sans-serif;
+
 }
 section {
 background: rgb (010, 101, 001);
